--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="js/app.js?_v=20230117235206"></script>
-    <link rel="stylesheet" href="css/style.css?_v=20230117235206">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230117235206" />
+    <script defer src="js/app.js?_v=20230119135001"></script>
+    <link rel="stylesheet" href="css/style.css?_v=20230119135001">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230119135001" />
     <title>Document</title>
 </head>
 
@@ -72,116 +72,61 @@
         </div>
     </div>
 
+
+    <div class="main-slider__absolute-container">
+        <div class="main-slider__left">
+            <div class="main-slider__text-block">
+                <div class="main-slider__title">Thoughtful <br>
+                    making of space</div>
+                <div class="main-slider__discover-button">
+                    <div class="main-slider__line-short"></div><a href="projects.html">Discover more</a>
+                    <div class="main-slider__line-long">
+                    </div>
+                </div>
+            </div>
+
+            <div class="main-slider__lower">
+                <div class="main-slider__buttons">
+                    <div class="main-slider__lang">Fb</div>
+                    <div class="main-slider__lang">In</div>
+                    <div class="main-slider__lang">Be</div>
+                </div>
+                <div class="main-slider__dropdown-container select">
+                    <div class="select__header">
+                        <img src="img/location.svg" alt="1" class="main-slider__location">
+                        <span class="select-current">Berlin</span>
+                        <img src="img/dropdown-arrow.svg" alt="1" class="select__arrow">
+                    </div>
+                    <ul class="select__body">
+                        <li class="select__item">Paris</li>
+                        <li class="select__item">Berlin</li>
+                    </ul>
+                </div>
+                <div class="main-slider__phone">+380983527547</div>
+                <div class="main-slider__email">info@gmail.com</div>
+            </div>
+        </div>
+        <div class="main-slider__right">
+            <img src="img/main-slider-vertical-text.svg" alt="" class="main-slider__vertical-text">
+            <img src="img/main-slider-vertical-img.svg" alt="" class="main-slider__vertical-img">
+            <img src="img/main-slider-vertical-img-mobile.svg" alt="" class="main-slider__vertical-img-mobile">
+            <img src="img/main-slider-vertical-img-mobile-non-transparent.svg" alt=""
+                class="main-slider__vertical-img-mobile-non-transparent">
+        </div>
+    </div>
+
     <section class="swiper main-slider">
         <div class="swiper-wrapper main-slider__wrapper">
             <div class="swiper-slide main-slider__first-slide">
-                <div class="main-slider__text-block">
-                    <div class="main-slider__title">Thoughtful <br>
-                        making of space</div>
-                    <div class="main-slider__discover-button">
-                        <div class="main-slider__line-short"></div><a href="projects.html">Discover more</a><div class="main-slider__line-long">
-                        </div>
-                    </div>
-                </div>
 
-                <div class="main-slider__lower">
-                    <div class="main-slider__buttons">
-                        <div class="main-slider__lang">Fb</div>
-                        <div class="main-slider__lang">In</div>
-                        <div class="main-slider__lang">Be</div>
-                    </div>
-                    <div class="main-slider__dropdown-container select">
-                        <div class="select__header">
-                            <img src="img/location.svg" alt="1" class="main-slider__location">
-                            <span class="select-current">Berlin</span>
-                            <img src="img/dropdown-arrow.svg" alt="1" class="select__arrow">
-                        </div>
-                        <ul class="select__body">
-                            <li class="select__item">Paris</li>
-                            <li class="select__item">Berlin</li>
-                        </ul>
-                    </div>
-                    <div class="main-slider__phone">+380983527547</div>
-                    <div class="main-slider__email">info@gmail.com</div>
-                </div>
             </div>
 
             <div class="swiper-slide main-slider__second-slide">
-                <div class="main-container__left">
-                    <img src="img/main-slider-vertical-text.svg" alt="" class="main-slider__vertical-text">
-                    <img src="img/main-slider-vertical-img.svg" alt="" class="main-slider__vertical-img">
-                    <img src="img/main-slider-vertical-img-mobile.svg" alt="" class="main-slider__vertical-img-mobile">
-                    <img src="img/main-slider-vertical-img-mobile-non-transparent.svg" alt=""
-                        class="main-slider__vertical-img-mobile-non-transparent">
-                </div>
-                <div class="main-container__right">
-                    <div class="main-slider__text-block">
-                        <div class="main-slider__title">Thoughtful <br>
-                            making of space</div>
-                        <div class="main-slider__discover-button ">
-                            <div class="main-slider__line-short"></div><a href="projects.html">Discover more</a><div class="main-slider__line-long">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="main-slider__lower">
-                        <div class="main-slider__buttons">
-                            <div class="main-slider__lang">Fb</div>
-                            <div class="main-slider__lang">In</div>
-                            <div class="main-slider__lang">Be</div>
-                        </div>
-                        <div class="main-slider__dropdown-container select">
-                            <div class="select__header">
-                                <img src="img/location.svg" alt="1" class="main-slider__location">
-                                <span class="select-current">Berlin</span>
-                                <img src="img/dropdown-arrow.svg" alt="1" class="select__arrow">
-                            </div>
-                            <ul class="select__body">
-                                <li class="select__item">London</li>
-                                <li class="select__item">Berlin</li>
-                            </ul>
-                        </div>
-                        <div class="main-slider__phone">+380983527547</div>
-                        <div class="main-slider__email">E: info@gmail.com</div>
-                    </div>
-                </div>
+
             </div>
 
             <div class="swiper-slide main-slider__second-slide">
-                <div class="main-container__left">
-                    <img src="img/main-slider-vertical-text.svg" alt="" class="main-slider__vertical-text">
-                    <img src="img/main-slider-vertical-img.svg" alt="" class="main-slider__vertical-img">
-                    <img src="img/main-slider-vertical-img-mobile.svg" alt="" class="main-slider__vertical-img-mobile">
-                </div>
-                <div class="main-container__right">
-                    <div class="main-slider__text-block">
-                        <div class="main-slider__title">Thoughtful <br>
-                            making of space</div>
-                        <div class="main-slider__discover-button ">
-                            <div class="main-slider__line-short"></div><a href="projects.html">Discover more</a><div class="main-slider__line-long">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="main-slider__lower">
-                        <div class="main-slider__dropdown-container select">
-                            <div class="select__header">
-                                <img src="img/location.svg" alt="1" class="main-slider__location">
-                                <span class="select-current">Berlin</span>
-                                <img src="img/dropdown-arrow.svg" alt="1" class="select__arrow">
-                            </div>
-                            <ul class="select__body">
-                                <li class="select__item">London</li>
-                                <li class="select__item">Berlin</li>
-                            </ul>
-                        </div>
-                        <div class="main-slider__buttons">
-                            <div class="main-slider__lang">Fb</div>
-                            <div class="main-slider__lang">In</div>
-                            <div class="main-slider__lang">Be</div>
-                        </div>
-                        <div class="main-slider__phone">+380983527547</div>
-                        <div class="main-slider__email">E: info@gmail.com</div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
@@ -490,9 +435,9 @@
 </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230117235206"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230119135001"></script>
 
-    <script src="js/app.js?_v=20230117235206"></script>
+    <script src="js/app.js?_v=20230119135001"></script>
 </body>
 
 </html>
