additional slider fixes

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="js/app.js?_v=20230119135001"></script>
-    <link rel="stylesheet" href="css/style.css?_v=20230119135001">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230119135001" />
+    <script defer src="js/app.js?_v=20230119215505"></script>
+    <link rel="stylesheet" href="css/style.css?_v=20230119215505">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230119215505" />
     <title>Document</title>
 </head>
 
@@ -59,7 +59,8 @@
 </div>
     </section>
 
-
+    <img src="img/main-slider-vertical-img-mobile-non-transparent.svg" alt="24"
+        class="main-slider__vertical-img-mobile-non-transparent">
     <div class="main-slider__pagination-big-box">
         <div class="main-slider__pag-container">
             <button class="swiper-button-prev main-slider__arrow-pag  main-slider-prev"
@@ -110,8 +111,7 @@
             <img src="img/main-slider-vertical-text.svg" alt="" class="main-slider__vertical-text">
             <img src="img/main-slider-vertical-img.svg" alt="" class="main-slider__vertical-img">
             <img src="img/main-slider-vertical-img-mobile.svg" alt="" class="main-slider__vertical-img-mobile">
-            <img src="img/main-slider-vertical-img-mobile-non-transparent.svg" alt=""
-                class="main-slider__vertical-img-mobile-non-transparent">
+
         </div>
     </div>
 
@@ -435,9 +435,9 @@
 </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230119135001"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230119215505"></script>
 
-    <script src="js/app.js?_v=20230119135001"></script>
+    <script src="js/app.js?_v=20230119215505"></script>
 </body>
 
 </html>
