--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css?_v=20230119221714">
-    <script defer src="js/app.js?_v=20230119221714"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230119221714" />
+    <link rel="stylesheet" href="css/style.css?_v=20230120170803">
+    <script defer src="js/app.js?_v=20230120170803"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230120170803" />
     <title>Document</title>
 </head>
 
@@ -205,7 +205,8 @@
                 </form>
             </div>
             <div class="about-footer__right">
-                <div class="about-footer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper
+                <div class="about-footer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                    ullamcorper
                     eu mauris vitae posuere. Ut at luctus
                     ligula. Nunc ante felis, aliquam.</div>
                 <div class="about-footer__right-bottom">
@@ -333,7 +334,7 @@
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230119221714"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230120170803"></script>
 </body>
 
 </html>
