--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css?_v=20230120170803">
-    <script defer src="js/app.js?_v=20230120170803"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230120170803" />
+    <link rel="stylesheet" href="css/style.css?_v=20230120204109">
+    <script defer src="js/app.js?_v=20230120204109"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230120204109" />
     <title>Document</title>
 </head>
 
@@ -323,7 +323,7 @@
                         <div class="popup__attach-underheading">File size not more than 10 MB</div>
                     </div>
                 </div>
-                <button class="popup__button">Send Request</button>
+                <button class="popup__button popup-complete-button">Send Request</button>
             </div>
             <div class="popup__text">It is a long established fact that a reader will be distracted by the readable
                 content of a page when looking at its
@@ -334,7 +334,7 @@
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230120170803"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230120204109"></script>
 </body>
 
 </html>
