--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="js/app.js?_v=20230120170803"></script>
-    <link rel="stylesheet" href="css/style.css?_v=20230120170803">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230120170803" />
+    <script defer src="js/app.js?_v=20230120204109"></script>
+    <link rel="stylesheet" href="css/style.css?_v=20230120204109">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230120204109" />
     <title>Document</title>
 </head>
 
@@ -423,7 +423,7 @@
                         <div class="popup__attach-underheading">File size not more than 10 MB</div>
                     </div>
                 </div>
-                <button class="popup__button">Send Request</button>
+                <button class="popup__button popup-complete-button">Send Request</button>
             </div>
             <div class="popup__text">It is a long established fact that a reader will be distracted by the readable
                 content of a page when looking at its
@@ -435,9 +435,22 @@
 </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230120170803"></script>
+    <div class="popup-complete__outer">
+    <div class="popup-complete">
+        <div class="popup-complete__cross">
+            <span></span>
+        </div>
+        <div class="popup-complete__title">Thank you for your message!</div>
+        <div class="popup-complete__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper
+            eu mauris vitae posuere. Ut at luctus
+            ligula. Nunc ante felis, aliquam eu enim sed, ornare pretium velit.</div>
+        <button class="popup-complete__button">Send again</button>
+    </div>
+</div>
 
-    <script src="js/app.js?_v=20230120170803"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230120204109"></script>
+
+    <script src="js/app.js?_v=20230120204109"></script>
 </body>
 
 </html>
