--- a/news.html
+++ b/news.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css?_v=20230122121741">
-    <script defer src="js/app.js?_v=20230122121741"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230122121741" />
+    <link rel="stylesheet" href="css/style.css?_v=20230123134532">
+    <script defer src="js/app.js?_v=20230123134532"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230123134532" />
     <title>Document</title>
 </head>
 
@@ -94,8 +94,8 @@
                                 <div class="news-main__line-long"></div>
                             </div>
                         </div>
-                        <img src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image">
-                        <img src="img/news-orangekitchen-mobile.jpg" alt="1" class="news-main__image-mobile">
+                        <picture><source srcset="img/news-sofa&kitchen.webp" type="image/webp"><img src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image"></picture>
+                        <picture><source srcset="img/news-orangekitchen-mobile.webp" type="image/webp"><img src="img/news-orangekitchen-mobile.jpg" alt="1" class="news-main__image-mobile"></picture>
                     </div>
                     <div class="news-main__double-block">
                         <div class="news-main__block">
@@ -118,7 +118,7 @@
                                 <div class="news-main__line-long"></div>
                             </div>
                         </div>
-                        <img id="second-image" src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image">
+                        <picture><source srcset="img/news-sofa&kitchen.webp" type="image/webp"><img id="second-image" src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image"></picture>
                         <img id="second-image" src="img/news-sofa-kitchen-mobile.jpg" alt="1"
                             class="news-main__image-mobile">
 
@@ -138,8 +138,8 @@
                                 <div class="news-main__line-long"></div>
                             </div>
                         </div>
-                        <img src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image">
-                        <img src="img/news-orangekitchen-mobile.jpg" alt="1" class="news-main__image-mobile">
+                        <picture><source srcset="img/news-sofa&kitchen.webp" type="image/webp"><img src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image"></picture>
+                        <picture><source srcset="img/news-orangekitchen-mobile.webp" type="image/webp"><img src="img/news-orangekitchen-mobile.jpg" alt="1" class="news-main__image-mobile"></picture>
                     </div>
                     <div class="news-main__double-block">
                         <div class="news-main__block">
@@ -163,7 +163,7 @@
                                 <div class="news-main__line-long"></div>
                             </div>
                         </div>
-                        <img id="second-image" src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image">
+                        <picture><source srcset="img/news-sofa&kitchen.webp" type="image/webp"><img id="second-image" src="img/news-sofa&kitchen.jpg" alt="1" class="news-main__image"></picture>
                         <img id="second-image" src="img/news-sofa-kitchen-mobile.jpg" alt="1"
                             class="news-main__image-mobile">
 
@@ -307,5 +307,5 @@
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230122121741"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230123134532"></script>
 </body>
