--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="js/app.js?_v=20230122121741"></script>
-    <link rel="stylesheet" href="css/style.css?_v=20230122121741">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230122121741" />
+    <script defer src="js/app.js?_v=20230123134532"></script>
+    <link rel="stylesheet" href="css/style.css?_v=20230123134532">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230123134532" />
     <title>Document</title>
 </head>
 
@@ -152,11 +152,11 @@
                     <div class="philosophy__line-long"></div>
                 </div>
             </div>
-            <img src="img/kitchen-with-fireplace.jpg" alt="" class="philosophy__big-img">
+            <picture><source srcset="img/kitchen-with-fireplace.webp" type="image/webp"><img src="img/kitchen-with-fireplace.jpg" alt="" class="philosophy__big-img"></picture>
         </div>
         <div class="philosophy__container">
-            <img src="img/living-room-with-TV-and-orange-floor.jpg" alt="" class="philosophy__mid-img">
-            <img src="img/white-kitchen-black-sofa.jpg" alt="" class="philosophy__white-img">
+            <picture><source srcset="img/living-room-with-TV-and-orange-floor.webp" type="image/webp"><img src="img/living-room-with-TV-and-orange-floor.jpg" alt="" class="philosophy__mid-img"></picture>
+            <picture><source srcset="img/white-kitchen-black-sofa.webp" type="image/webp"><img src="img/white-kitchen-black-sofa.jpg" alt="" class="philosophy__white-img"></picture>
             <div class="philosophy__blog">
                 <div class="philosophy__quotes">“</div>
                 <div class="philosophy__comment">We can also help you create harmony out of seemingly completely
@@ -248,7 +248,7 @@
                     </div>
                     <div class="our-projects__last-block">
                         <div class="our-projects__last-block-text">See more 60 projects</div>
-                        <img src="img/grey-living-room-with-TV.jpg" alt="" class="our-projects__small-size-img">
+                        <picture><source srcset="img/grey-living-room-with-TV.webp" type="image/webp"><img src="img/grey-living-room-with-TV.jpg" alt="" class="our-projects__small-size-img"></picture>
                     </div>
 
                 </div>
@@ -448,9 +448,9 @@
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230122121741"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230123134532"></script>
 
-    <script src="js/app.js?_v=20230122121741"></script>
+    <script src="js/app.js?_v=20230123134532"></script>
 </body>
 
 </html>
