--- a/one-news.html
+++ b/one-news.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css?_v=20230122121741">
-    <script defer src="js/app.js?_v=20230122121741"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230122121741" />
+    <link rel="stylesheet" href="css/style.css?_v=20230123134532">
+    <script defer src="js/app.js?_v=20230123134532"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230123134532" />
     <title>Document</title>
 </head>
 
@@ -206,22 +206,22 @@
         <div class="swiper mini-slider">
             <div class="swiper-wrapper mini-slider__wrapper">
                 <div class="swiper-slide mini-slider__slide-card">
-                    <img src="img/mini-slider-granite-kitchen.jpg" alt="" class="mini-slider__img">
+                    <picture><source srcset="img/mini-slider-granite-kitchen.webp" type="image/webp"><img src="img/mini-slider-granite-kitchen.jpg" alt="" class="mini-slider__img"></picture>
                     <div class="mini-slider__text">Antrax IT - Italian factory for the production of radiators</div>
                     <div class="mini-slider__date">01 January 2019</div>
                 </div>
                 <div class="swiper-slide mini-slider__slide-card">
-                    <img src="img/mini-slider-white-kitchen.jpg" alt="" class="mini-slider__img">
+                    <picture><source srcset="img/mini-slider-white-kitchen.webp" type="image/webp"><img src="img/mini-slider-white-kitchen.jpg" alt="" class="mini-slider__img"></picture>
                     <div class="mini-slider__text">Antrax IT - Italian factory for the production of radiators</div>
                     <div class="mini-slider__date">01 January 2019</div>
                 </div>
                 <div class="swiper-slide mini-slider__slide-card">
-                    <img src="img/mini-slider-orange-kitchen.jpg" alt="" class="mini-slider__img">
+                    <picture><source srcset="img/mini-slider-orange-kitchen.webp" type="image/webp"><img src="img/mini-slider-orange-kitchen.jpg" alt="" class="mini-slider__img"></picture>
                     <div class="mini-slider__text">Antrax IT - Italian factory for the production of radiators</div>
                     <div class="mini-slider__date">01 January 2019</div>
                 </div>
                 <div class="swiper-slide mini-slider__slide-card">
-                    <img src="img/mini-slider-fireplace-kitchen.jpg" alt="" class="mini-slider__img">
+                    <picture><source srcset="img/mini-slider-fireplace-kitchen.webp" type="image/webp"><img src="img/mini-slider-fireplace-kitchen.jpg" alt="" class="mini-slider__img"></picture>
                     <div class="mini-slider__text">Antrax IT - Italian factory for the production of radiators</div>
                     <div class="mini-slider__date">01 January 2019</div>
                 </div>
@@ -343,7 +343,7 @@
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230122121741"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230123134532"></script>
 </body>
 
 </html>
