--- a/news.html
+++ b/news.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="webp">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css?_v=20230123140816">
-    <script defer src="js/app.js?_v=20230123140816"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230123140816" />
+    <link rel="stylesheet" href="css/style.css?_v=20230123145413">
+    <script defer src="js/app.js?_v=20230123145413"></script>
+    <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230123145413" />
     <title>Document</title>
 </head>
 
@@ -307,5 +307,5 @@
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230123140816"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230123145413"></script>
 </body>
