--- a/one-news.html
+++ b/one-news.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css?_v=20230123231916">
-    <script defer src="js/app.js?_v=20230123231916"></script>
-    <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230123231916" />
+    <link defer rel="stylesheet" href="css/style.css?_v=20230124160126">
+    <script defer src="js/app.js?_v=20230124160126"></script>
+    <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230124160126" />
     <title>Document</title>
 </head>
 
@@ -343,7 +343,7 @@
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230123231916"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230124160126"></script>
 </body>
 
 </html>
