critical css first try

--- a/one-news.html
+++ b/one-news.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link defer rel="stylesheet" href="css/style.css?_v=20230125012604">
-    <script defer src="js/app.js?_v=20230125012604"></script>
-    <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230125012604" />
+    <style>@font-face{font-family:Montserrat-300;src:url(../fonts/Montserrat-Light.ttf)}@font-face{font-family:Montserrat-400;src:url(../fonts/Montserrat-Regular.ttf)}@font-face{font-family:Montserrat-500;src:url(../fonts/Montserrat-Medium.ttf)}@font-face{font-family:Montserrat-600;src:url(../fonts/Montserrat-SemiBold.ttf)}@font-face{font-family:Montserrat-700;src:url(../fonts/Montserrat-Bold.ttf)}.main-slider{width:100%;max-width:1440px;height:744px;color:#fff;position:relative}.philosophy{margin:140px 0 0 0;width:100%;max-width:1440px}.projects-header{width:100%;max-width:1440px}.projects-controller{margin:112px 0 0 0;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;width:100%;max-width:1440px}.contacts-full-page-container{width:100%;height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:100%;overflow:hidden}.contacts-main{margin:0;width:100%;height:744px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;color:#fff}.news-controller{margin:112px 0 0 0;width:100%;max-width:1046px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between}.factory{margin:112px 0 0 0;width:100%;max-width:1440px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between}.one-projects-header{position:absolute;z-index:50;width:100%;max-width:1440px;color:#fff}.one-slide{margin:0;width:100%;max-width:1440px;height:744px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.about-main{margin:0;width:100%;max-width:1440px;height:648px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.header{margin:0;width:100%;max-width:1440px;height:96px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-ms-flex-align:center;align-items:center;background:0 0}</style>
+    <link defer rel="stylesheet" href="css/style.css?_v=20230125110154">
+    <script defer src="js/app.js?_v=20230125110154"></script>
+    <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230125110154" />
     <title>Document</title>
 </head>
 
@@ -343,7 +344,7 @@
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230125012604"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230125110154"></script>
 </body>
 
 </html>
