--- a/preloader.html
+++ b/preloader.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" class="webp">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="js/app.js?_v=20230125193345"></script>
-    <link defer rel="stylesheet" href="css/style.css?_v=20230125193345">
-    <title>Document</title>
-</head>
-
-<body>
-    <div class="preloader">
-        <div class="preloader__word">HI</div>
-        <div class="preloader__percents">
-            <span id="percents"></span>%
-        </div>
-
-    </div>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en" class="webp"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="js/app.js?_v=20230125195338"></script><link defer="defer" rel="stylesheet" href="css/style.css?_v=20230125195338"><title>Document</title></head><body><div class="preloader"><div class="preloader__word">HI</div><div class="preloader__percents"><span id="percents"></span>%</div></div></body></html>
